# openconnect-sso

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  default.nix  flake.nix  lib.nix  openconnect-sso.nix  overlay.nix  pyproject.toml  shell.nix
.github/workflows/: codingstyle.yml  test.yml
nix/: default.nix  openconnect-sso.nix  sources.json  sources.nix
openconnect_sso/: __init__.py  app.py  authenticator.py  cli.py  config.py  profile.py  saml_authenticator.py  version.py
openconnect_sso/browser/: __init__.py  browser.py  rpc_types.py  user.js  webengine_process.py
releasenotes/: config.yaml
releasenotes/notes/: attrs-fix-version-d24a0698610704b8.yaml  attrs-relax-version-constraint-233f6f745895fa9f.yaml  attrs-version-relaxed-a1a4c43f88c7ca98.yaml  auth-fail-060af56d0ac0b795.yaml  authenticate-only-389fc9f6a7971d8f.yaml  authgroup-fe3578e6be5e4855.yaml  browser-display-mode-33a3209e583fea58.yaml  browser-stop-if-invalid-creds-6d7031efa2fa691a.yaml  dependencies-2dde1fee52faa35a.yaml  development-status-48152b58c305eda3.yaml  fix-browser-popup-3f2e0a45984cf436.yaml  fix-server-should-override-default-profile-ea07dc38d80f9669.yaml  multiprocessing-browser-8e043616e821c59f.yaml  python-3.6_compatibility-3c6eeb53de22ab20.yaml  qt-packaging-d1480e1118e82b43.yaml  vpn-behind-loadbalancer-18f64b46f74741ab.yaml  window-close-crash-cd951224e4aedde2.yaml
scripts/: devenv
tests/: conftest.py  test_browser.py  test_hostprofile.py  test_openconnect_sso.py
