[tool.poetry]
name = "openconnect-sso"
version = "0.3.5"
description = "Wrapper script for OpenConnect supporting Azure AD (SAMLv2) authentication to Cisco SSL-VPNs"
authors = ["László Vaskó <laszlo.vasko@outlook.com>"]
readme = "README.md"

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Networking",
]

[tool.poetry.scripts]
openconnect-sso = "openconnect_sso.cli:main"

[tool.poetry.dependencies]
python = "^3.6"
PyQt5 = "^5.12"
PyQtWebEngine = "^5.12"
attrs = ">=18.2, <19.2.0"
colorama = "^0.4"
lxml = "^4.3"
keyring = "^18.0"
prompt-toolkit = "^2.0"
pyxdg = "^0.26"
requests = "^2.22"
structlog = "^19.1"
toml = "^0.10"

[tool.poetry.dev-dependencies]
coverage_enable_subprocess = "^1.0"
pytest = "^3.0"
black = "=19.3b0"
pytest-asyncio = "^0.10.0"
pytest-cov = "^2.7"
pytest-httpserver = "^0.3.4"
reno = "^2.11"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
