[tool.poetry]
name = "openconnect-sso"
version = "0.5.0a1"
description = "Wrapper script for OpenConnect supporting Azure AD (SAMLv2) authentication to Cisco SSL-VPNs"
license = "GPL-3.0-only"
authors = ["László Vaskó <laszlo.vasko@outlook.com>"]
readme = "README.md"
homepage = "https://github.com/vlaci/openconnect-sso"
repository = "https://github.com/vlaci/openconnect-sso"

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Networking",
]

[tool.poetry.scripts]
openconnect-sso = "openconnect_sso.cli:main"

[tool.poetry.dependencies]
python = "^3.6"
attrs = ">=18.2, <=19.3.0"
colorama = "^0.4"
importlib-metadata = { version = "^1.4.0", python = "<3.8" }
lxml = "^4.3"
keyring = "^21.1"
prompt-toolkit = "^3.0.3"
pyxdg = "^0.26"
requests = "^2.22"
structlog = "^20.1"
toml = "^0.10"
setuptools = ">40.0"

PyQt5 = { version = "^5.12", optional = true }
PyQtWebEngine = { version ="^5.12", optional = true }

[tool.poetry.extras]
full = [ "PyQt5", "PyQtWebEngine" ]

[tool.poetry.dev-dependencies]
coverage_enable_subprocess = "^1.0"
pytest = "^3.0"
black = "=19.3b0"
pytest-asyncio = "^0.10.0"
pytest-cov = "^2.7"
pytest-httpserver = "^0.3.4"
reno = "^2.11"
# Fix installation of zipp dependency of importlib-metadata
setuptools-scm = { version ="^3.4", extras = ["toml"] }

[tool.black]
target-version = ['py36', 'py37', 'py38']

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
